--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://abhay-kr-0705.github.io/GenX-2",
   "name": "genx-now-website",
   "private": true,
   "version": "0.0.0",
@@ -7,17 +8,24 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.4",
-    "@supabase/supabase-js": "^2.47.12",
+    "@supabase/supabase-js": "^2.39.3",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.12.2",
     "zustand": "^5.0.3"
   },
@@ -25,17 +33,18 @@
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "gh-pages": "^6.3.0",
-    "globals": "^15.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.4"
   }
 }
