--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.3",
     "recharts": "^2.12.2",
