--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@supabase/supabase-js": "^2.39.3",
+    "antd": "^5.23.3",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0",
@@ -26,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.22.3",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.3",
     "recharts": "^2.12.2",
     "zustand": "^5.0.3"
