--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@supabase/supabase-js": "^2.39.3",
     "antd": "^5.23.3",
     "axios": "^1.7.9",
+    "cloudinary": "^1.41.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.344.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
